--- a/core/public/index.html
+++ b/core/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="shared/css/style.css">
+    <link rel="stylesheet" href="shared/css/style.scss">
     <title>To-Do List</title>
 </head>
 
